# coin

./: .cvsignore  .gitmodules  .hgsub  .hgsubstate  AUTHORS  BUGS  BUGS.txt  CMakeLists.txt  COPYING  ChangeLog.1999  ChangeLog.2000  ChangeLog.header  Coin.pc.cmake.in  Coin.pc.in  Coin.tag  CoinResources_8h_source.html  FAQ  FAQ.legal  HACKING  INSTALL  INSTALL.GNU  Info.plist  Info.plist.in  LICENSE.LGPL  LICENSE.QPL  Makefile.am  Makefile.in  Metadon.conf  NEWS  README  README.AIX  README.IRIX  README.MAC  README.MACOSX  README.MSVC  README.SUN  README.VRML97  README.WIN32  README.md  RELEASE  (+3865 more)
data/: CMakeLists.txt  Makefile.am  Makefile.in
data/draggerDefaults/: .cvsignore  Makefile.am  Makefile.in  centerballDragger.iv  directionalLightDragger.iv  dragPointDragger.iv  iv2h.sh  iv2h.sh.in  jackDragger.iv  pointLightDragger.iv  rotateCylindricalDragger.iv  rotateDiscDragger.iv  rotateSphericalDragger.iv  scale1Dragger.iv  scale2Dragger.iv  scale2UniformDragger.iv  spotLightDragger.iv  trackballDragger.iv  transformBoxDragger.iv  transformerDragger.iv  translate1Dragger.iv  translate2Dragger.iv
data/scxml/: Makefile.in  xml2cpp.pl
data/shaders/: Makefile.am  Makefile.in  glsl2h.sh.in
examples/dynloadextensions/: CMakeLists.txt  Switchboard.cpp  Switchboard.h  SwitchboardOperator.cpp  SwitchboardOperator.h
examples/helloworld/: CMakeLists.txt  README.md  coin_helloworld.cpp
examples/qt/: CMakeLists.txt  README.md  qt_example.cpp
extras/SoFBXFileKit/: CMakeLists.txt  configure
html/: .cvsignore  Makefile.am  Makefile.in  coin.tag
include/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.inc  README  SoDebug.h  SoWinEnterScope.h  SoWinLeaveScope.h  boost.README  coindefs.h  config.h.in  discard.h.in  setup.h.in  unconfig.h  update-config.sh
include/Coin/: Makefile.am  Makefile.in
include/Inventor/: .cvsignore  CMakeLists.txt  Make-Common.tpl  Makefile.am  Makefile.in  Sb.h  SbBSPTree.h  SbBasic.h  SbBasic.h.in  SbBox.h  SbBox2d.h  SbBox2f.h  SbBox2i32.h  SbBox2s.h  SbBox3d.h  SbBox3f.h  SbBox3i32.h  SbBox3s.h  SbByteBuffer.h  SbByteBufferP.icc  SbClip.h  SbColor.h  SbColor4f.h  SbColorRGBA.h  SbCylinder.h  SbDPLine.h  SbDPLinear.h  SbDPMatrix.h  SbDPPlane.h  SbDPRotation.h  SbDPViewVolume.h  SbDict.h  SbHeap.h  SbImage.h  SbLine.h  SbLinear.h  SbMatrix.h  SbName.h  SbOctTree.h  SbPList.h  (+56 more)
include/boost/: Makefile.inc  version.hpp
man/man3/: .cvsignore  Makefile.am  Makefile.in
src/: .cvsignore  Base.in  CMakeLists.txt  Coin.rc.cmake.in  Coin.rc.in  CoinConfig.cmake.in  CoinTracyConfig.h  Make-Common.tpl  Make-CompileSilent.tpl  Make-Install.tpl  Make-LibtoolSilent.tpl  Make-LinkSilent.tpl  Makefile.am  Makefile.in  SbBSPTree.cpp  SbBasic.h  SbBasicP.h  SbBox2f.cpp  SbBox2s.cpp  SbBox3f.cpp  SbColor.cpp  SbColor4f.cpp  SbCylinder.cpp  SbDict.cpp  SbLine.cpp  SbMatrix.cpp  SbName.cpp  SbPlane.cpp  SbRotation.cpp  SbSphere.cpp  SbString.cpp  SbTesselator.cpp  SbTime.cpp  SbVec2f.cpp  SbVec2s.cpp  SbVec3f.cpp  SbVec4f.cpp  SbViewVolume.cpp  SbViewportRegion.cpp  SbXfBox3f.cpp  (+30 more)
src/3ds/: .cvsignore  3dsLoader.cpp  3dsLoader.h  CMakeLists.txt  Makefile.am  Makefile.in  SoStream.cpp  SoStream.h  all-3ds-cpp.cpp
src/VRMLnodes/: .cvsignore  Makefile.am  Makefile.in  SoVRMLInterpOutput.cpp  SoVRMLInterpolator.cpp  all.cpp
src/actions/: .cvsignore  ActionClassTypeSource.tpl  ActionSource.tpl  CMakeLists.txt  Config.in  InitActionSource.tpl  Makefile.am  Makefile.in  SbTri3f.icc  SbTri3f.ih  SoAction.cpp  SoActionP.h  SoAudioRenderAction.cpp  SoBoxHighlightRenderAction.cpp  SoCallbackAction.cpp  SoGLRenderAction.cpp  SoGenerateNormalsAction.cpp  SoGetBoundingBoxAction.cpp  SoGetMatrixAction.cpp  SoGetPrimitiveCountAction.cpp  SoGlobalSimplifyAction.cpp  SoGraphVerifyAction.cpp  SoHandleEventAction.cpp  SoIntersectionDetectionAction.cpp  SoLineHighlightRenderAction.cpp  SoPickAction.cpp  SoRayPickAction.cpp  SoReorganizeAction.cpp  SoSearchAction.cpp  SoShapeSimplifyAction.cpp  SoSimplifyAction.cpp  SoSubActionP.h  SoToVRML2Action.cpp  SoToVRMLAction.cpp  SoWriteAction.cpp  actions.metadon  all-actions-cpp.cpp  all.cpp  soglrenderaction.scm
src/base/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  SbBSPTree.cpp  SbBox2d.cpp  SbBox2f.cpp  SbBox2i32.cpp  SbBox2s.cpp  SbBox3d.cpp  SbBox3f.cpp  SbBox3i32.cpp  SbBox3s.cpp  SbByteBuffer.cpp  SbClip.cpp  SbColor.cpp  SbColor4f.cpp  SbCylinder.cpp  SbDPLine.cpp  SbDPMatrix.cpp  SbDPPlane.cpp  SbDPRotation.cpp  SbDPViewVolume.cpp  SbDict.cpp  SbGLUTessellator.cpp  SbGLUTessellator.h  SbHeap.cpp  SbImage.cpp  SbLine.cpp  SbMatrix.cpp  SbName.cpp  SbOctTree.cpp  SbPlane.cpp  SbRotation.cpp  SbSphere.cpp  SbString.cpp  SbTesselator.cpp  SbTime.cpp  SbVec2b.cpp  SbVec2d.cpp  (+63 more)
src/bundles/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  SoBundle.cpp  SoMaterialBundle.cpp  SoNormalBundle.cpp  SoTextureCoordinateBundle.cpp  SoVertexAttributeBundle.cpp  all-bundles-cpp.cpp  all.cpp  bundles.metadon
src/caches/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  SoBVHCache.cpp  SoBVHCache.h  SoBoundingBoxCache.cpp  SoCache.cpp  SoChildBVH.cpp  SoChildBVH.h  SoConvexDataCache.cpp  SoGLCacheList.cpp  SoGLRenderCache.cpp  SoGlyphCache.cpp  SoGlyphCache.h  SoNormalCache.cpp  SoPrimitiveVertexCache.cpp  SoPrimitiveVertexCache.h  SoSceneBVH.cpp  SoSceneBVH.h  SoShaderProgramCache.cpp  SoShaderProgramCache.h  SoTextureCoordinateCache.cpp  SoVBOCache.cpp  SoVBOCache.h  all-caches-cpp.cpp  all.cpp  caches.metadon  normalcache_numcoords_hack.cpp  normalcache_numcoords_hack.h
src/coindev/: .cvsignore  Makefile.am  Makefile.in  coindev.cpp
src/collision/: CMakeLists.txt  Makefile.am  Makefile.in  SbTri3f.cpp  SbTri3f.h  SoIntersectionDetectionAction.cpp
src/details/: .cvsignore  CMakeLists.txt  DetailSource.tpl  Makefile.am  Makefile.in  SoConeDetail.cpp  SoDetail.cpp  (+10 more)
testsuite/: CMakeLists.txt  Makefile.in  README  StandardTests.cpp  TestSuiteInit.cpp  TestSuiteMain.cpp  TestSuiteMisc.cpp  TestSuiteMisc.h  TestSuiteTemplate.cmake.in  TestSuiteUtils.cpp  TestSuiteUtils.h  makeextract.sh  makemakefile.sh
(+3204 files in other folders)
